# VR-Viewer-360

./: .gitignore  Dockerfile  PROMPT.md  README.md  package.json  render.yaml  vercel.json
apps/api/: go.mod  go.sum  main.go
apps/api/internal/config/: config.go
apps/api/internal/database/: migrations.go  sqlite.go
apps/api/internal/handlers/: auth.go  context.go  health.go  hotspots.go  projects.go  public.go  scenes.go
apps/api/internal/middleware/: auth.go  logger.go
apps/api/internal/models/: models.go
apps/api/internal/repository/: asset_repo.go  hotspot_repo.go  project_repo.go  scene_repo.go  user_repo.go
apps/api/internal/services/: image_processor.go  jwt_service.go
apps/web/: next.config.ts  package-lock.json  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/auth/: page.tsx
apps/web/src/app/projects/[projectId]/: page.tsx
apps/web/src/app/tours/[slug]/: page.tsx
apps/web/src/components/: HotspotModal.tsx  ViewerCanvas.tsx
apps/web/src/lib/: api.ts  auth-context.tsx
crates/image-processor/: Cargo.toml  README.md
crates/image-processor/src/: cubemap.rs  equirect.rs  errors.rs  lib.rs  main.rs  tiling.rs  types.rs
docs/: architecture.md
