[package]
name = "image-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
rayon = "1.7"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "image_processor"
path = "src/lib.rs"

[[bin]]
name = "image-processor"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
